kubernetes/apps/game/epicgames-freegames/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: epicgames-freegames
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - "epic.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: epicgames-freegames
          namespace: game
          port: ${APP_PORT}
